--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,8 +1,7 @@
-- id: doi:10.1371/journal.pcbi.1007128
+- id: 10.1007/978-3-031-43699-4_42
   type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2020-12-4
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  description: Humans As Sensors in Urban Digital Twins
+  image: https://www.researchgate.net/profile/Filip-Biljecki/publication/378355824/figure/fig1/AS:11431281225580244@1708845623746/The-framework-of-human-centric-urban-digital-twins.png
   buttons:
     - type: manubot
       link: https://greenelab.github.io/meta-review/
@@ -12,12 +11,11 @@
     - type: website
       link: http://manubot.org/
   tags:
-    - open science
-    - collaboration
+    - digital-twin
+    - Cesium
   repo: greenelab/meta-review
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-
-- id: doi:10.7554/eLife.32822
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+- id: doi:10.1098/rsif.2017.0387
+- id: pubmed:29424689
+- id: pmc:PMC5640425
+- id: arxiv:1806.05726
