--- a/_config.yaml
+++ b/_config.yaml
@@ -1,19 +1,19 @@
 # site properties and page defaults
-title: suyunlei
-subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+title: UMS
+subtitle: Urban Morphology Studio
+description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
 # site social media and other links
 links:
-  email: contact@suyunlei.com
+  email: contact@your-lab.com
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
-  github: suyunlei
-  twitter: suyunlei
-  youtube: suyunlei
+  github: your-lab
+  twitter: YourLabHandle
+  youtube: YourLabChannel
 
 ### jekyll settings
 
@@ -49,7 +49,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jekyll-feed
-  - jekyll-last-modified-at
+  # - jekyll-last-modified-at
 
 # code block syntax highlighting
 highlighter: rouge
